--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h1 class="text-center">Northy's Coaching</h1>
 
             <div class="d-flex">
-                <button class="btn btn-success rounded-0 ms-auto " v-on:click="showCheckOut"
+                <button class="btn btn-success rounded-0 ms-auto " @click="showCheckOut"
                     :disabled="!cartSize > 0">{{cartSize}} Checkout </button>
             </div>
 
@@ -32,14 +32,14 @@
                 <div class="d-flex align-items-center gap-3 flex-wrap mb-3">
 
                     <div>
-                        <input type="text" class="form-control" v-model="searchTerm" placeholder="search...">
+                        <input type="text" class="form-control" v-model="searchTerm" placeholder="search..." @input="searchLessons">
                     </div>
 
 
 
                     <label for="sortAttribute">Sort By:</label>
                     <div>
-                        <select v-model="sortAttribute" class="form-select">
+                        <select v-model="sortAttribute" class="form-select" @change="searchLessons">
                             <option value="subject">Subject</option>
                             <option value="location">Location</option>
                             <option value="price">Price</option>
@@ -50,7 +50,7 @@
                     <label for="sortOrder">Sort Order:</label>
                     <div>
 
-                        <select v-model="sortOrder" class="form-select">
+                        <select v-model="sortOrder" class="form-select" @change="searchLessons">
                             <option value="asc">Ascending</option>
                             <option value="desc">Descending</option>
                         </select>
